--- a/readable_server/package.json
+++ b/readable_server/package.json
@@ -13,15 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
-    "clone": "^2.1.1",
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "react-modal": "^2.2.4",
-    "react-native-search-bar": "^3.0.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.1.1",
-    "react-router-dom": "4.1.1",
-    "redux": "^3.7.2"
+    "clone": "^2.1.1"
   }
 }
