--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ readable_client/src/components/CommentList.js
 readable_client/src/components/PostForm.js
 readable_client/src/components/PostList.js
 readable_client/src/utils/sAPI.js
+api-server
