--- a/readable_client/package.json
+++ b/readable_client/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "axios": "^0.17.1",
     "material-ui": "^0.19.2",
+    "moment": "^2.19.2",
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.12",
+    "react-time": "^4.3.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.4.2",
